# pyvis

./: .env.example  README.md  main.py  pyproject.toml  utils.py
agent/: agent.py
data/: data.csv
docker/sandbox/: Dockerfile  runner.py
tests/: test_sandbox_executor.py
utils/: __init__.py  e2b_utils.py  env_utils.py  prompt_builder.py  sandbox_executor.py
