[project]
name = "pyvis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.75.0",
    "dotenv>=0.9.9",
    "e2b-code-interpreter>=1.5.1",
    "geopandas>=1.1.2",
    "langchain>=0.3.27",
    "langchain-google>=0.1.1",
    "langchain-google-genai>=2.1.12",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "streamlit>=1.52.1",
    "wordcloud>=1.9.6",
]
